<resources>
    <string name="app_name">Tathastu</string>
    <string name="website">www.tathastu.com</string>
    <string name="name">Name</string>
    <string name="sop_id">Sponsor ID</string>
    <string name="address">Address</string>
    <string name="near_loc">Near Location</string>
    <string name="mobile">Contact No.</string>
    <string name="bank_name">Bank Name</string>
    <string name="ac_no">Bank Account No.</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch">Branch</string>
    <string name="aadhaar_card">Upload Aadhaar Card</string>
    <string name="optional">*Optional</string>
    <string name="adhar_no">Aadhaar Card No.</string>
    <string name="password">Password</string>
    <string name="ac_name">Account Holder Name</string>
    <string name="upload_reciept">Upload Receipt</string>
    <string name="welcome_ge">Welcome to Tathsatu App</string>
    <string name="phone">Phone</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="drawer_opne">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="logout">Logout</string>
    <string name="preview">Preview</string>
    <string name="change_adharphoto">Change Aadhaar</string>
    <string name="Rs">₹</string>
    <string name="no_found">No found Item</string>
    <string name="email">Email</string>
    <string name="memerid">Member ID</string>
    <string name="about">About Us</string>
    <string name="projection">Projection</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="pincode">Pin Code</string>
    <string name="enter_pincode">Please enter you pin code </string>
    <string name="refund">Replacements</string>
    <string name="pname">Product Name</string>
    <string name="amount">Amount</string>
    <string name="refund_policy"><![CDATA[Refund & Returns Policy:\n If there is a product defect such as\n(1) The stitching of the product is bad.\n(2) If the product is torn or cracked.\n(3) If another product is delivered instead of the product that was ordered. The product must be refunded within 7 days from the date of delivery. Be sure to make a video while opening the product and send the video copy of the refundable product to WhatsApp: 7001825622/9434394087. You will also give your member ID.]]></string>
    <string name="make_relation">Keep building relationships success will one day say Tathastu</string>
    <string name="pcode">Product Code</string>
    <string name="msg">Message</string>
</resources>
