<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RefundActivity">

    <LinearLayout
        android:id="@+id/toolbar_layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/custom_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout_head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <EditText
                    android:id="@+id/et_pid"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:drawableLeft="@drawable/ic_orders"
                    android:drawablePadding="10dp"
                    android:hint="@string/pcode"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/login_text_focus_style"
                    android:paddingLeft="7dp"
                    android:paddingTop="3dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/pcode"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <EditText
                    android:id="@+id/et_pname"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:drawableLeft="@drawable/ic_orders"
                    android:drawablePadding="10dp"
                    android:hint="@string/pname"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/login_text_focus_style"
                    android:paddingLeft="7dp"
                    android:paddingTop="3dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/pname"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/et_pamount"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:drawableLeft="@drawable/ic_orders"
                    android:drawablePadding="10dp"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/login_text_focus_style"
                    android:paddingLeft="7dp"
                    android:paddingTop="3dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/amount"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/et_msg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/login_layout_focus_style"
                    android:drawableLeft="@drawable/ic_orders"
                    android:drawablePadding="10dp"
                    android:hint="@string/msg"
                    android:paddingLeft="20dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/login_text_focus_style"
                    android:paddingLeft="7dp"
                    android:paddingTop="3dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="3dp"
                    android:text="@string/msg"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_change_pass_style"
                android:fontFamily="@font/expletus_sans_semibold"
                android:text="Submit"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey" />

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refund_policy"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>